--- a/textures.html
+++ b/textures.html
@@ -24,7 +24,7 @@
           </nav>
     </header>
     <main id="main">
-    <div class="container3"
+    <div class="container3">
         <h1>TEXTURES</h1><br>
 
         <h2>The Rover (2012)</h2><br>
