--- a/drops.html
+++ b/drops.html
@@ -13,7 +13,7 @@
       <a class="skip-main" href="#main">Skip to main content</a>
         <nav>
             <ul>
-                
+
                 <li><a href = "CV.html">CV</a></li>
                 <li><a href = "contact.html">Contact</a></li>
                 <li><a href = "setpieces.html">Set Pieces</a></li>
@@ -25,7 +25,7 @@
         </nav>
       </header>
       <main id="main">
-      <div class="container3"
+      <div class="container3">
           <h1>DROPS</h1><br>
 
           <h2>Alice in Wonderland (2013)</h2><br>
