--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main id="main">
-        <div class="container"
+        <div class="container">
         <h1>Find me on:</h1><br>
 
         <a href = "https://www.instagram.com/sirchamomile/?hl=en" aria-label = "Instagram"><i class="fab fa-instagram"></i></a>
