--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <h2>Send me a note:</h2><br>
 
         <!--based on code and lesson from: https://www.w3schools.com/howto/howto_css_contact_form.asp-->
-        <!--use bootstrap styling default for form--->
+        <!--use bootstrap styling default for form-->
         <!--use formspree.io for submissions-->
 
           <form method="POST" action="https://formspree.io/edevera@umich.edu">
