--- a/CV.html
+++ b/CV.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/browsericon.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -27,7 +28,7 @@
     </header>
   <main id="main">
 
-      <p> Below you can find a copy of my cv.</p>
+      <p> Below you can find a copy of my CV.</p>
       <iframe lang="en" src="docs/Peter_Baker_CV.pdf" aria-label= "resume"></iframe>
   </main>
   <footer>
