--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/browsericon.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -25,16 +26,19 @@
       </nav>
   </header>
   <main id="main">
+  <div class="container2">
+
+      <img src="images/headshot.jpg" alt = "Headshot"/>
+  </div>
   <div class="container">
+
       <h1>Hello!</h1><br>
       <p>My name is Peter Baker.</p><br>
       <p>I am a painter and a designer. I currently live in Minneapolis, Minnesota and work as the Assistant Scenic Painter at the Children's Theatre Company. I graduated with a BA in Theater Arts from the University of Minnesota in 2012.
       My work has primarily been for theatrical productions, but my interests span all realms of art and design. I work both by hand and digitally for design and rendering. I've also done extensive studies with computer rendering for art, design, and asset creation.
       All contact information can be found in my CV or by following the contact link above. Feel free to contact me with questions or for more information at any time.</p>
   </div>
-  <div class="container2">
-    <img src="images/headshot.jpg" alt = "Headshot"/>
-  </div>
+
   </main>
 <footer>
     <p> &copy; Peter Baker 2019</p>
