--- a/index.html
+++ b/index.html
@@ -14,23 +14,21 @@
     <a class="skip-main" href="#main">Skip to main content</a>
       <nav>
           <ul>
-            <li><a href = "CV.html">CV</a></li>
-            <li><a href = "contact.html">Contact</a></li>
+            <li><a class = "active" href = "index.html">About</a></li>
+            <li><a href = "textures.html">Textures</a></li>
             <li><a href = "setpieces.html">Set Pieces</a></li>
             <li><a href = "drops.html">Drops</a></li>
-            <li><a href = "textures.html">Textures</a></li>
-            <li><a class = "active" href = "index.html">About</a></li>
+            <li><a href = "contact.html">Contact</a></li>
+            <li><a href = "CV.html">CV</a></li>
+
 
 
           </ul>
       </nav>
   </header>
   <main id="main">
-  <div class="container2">
-
-      <img src="images/headshot.jpg" alt = "Headshot"/>
-  </div>
-  <div class="container">
+  <div id="parent">
+  <img class="headshot" src="images/headshot.jpg" alt = "Headshot"/>
 
       <h1>Hello!</h1><br>
       <p>My name is Peter Baker.</p><br>
@@ -38,7 +36,6 @@
       My work has primarily been for theatrical productions, but my interests span all realms of art and design. I work both by hand and digitally for design and rendering. I've also done extensive studies with computer rendering for art, design, and asset creation.
       All contact information can be found in my CV or by following the contact link above. Feel free to contact me with questions or for more information at any time.</p>
   </div>
-
   </main>
 <footer>
     <p> &copy; Peter Baker 2019</p>
